# Discord-Bot

./: .gitattributes  .replit  README.md  database.py  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  utils.py
.upm/: store.json
cogs/: commands.py  music_bot.py
